--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id='dealer-score'></div>
     <br>
     <h2 id='message-board'></h2>
-    <script src='blackjackv1.0.js'>
+    <script src='blackJackv1.0.js'>
     </script>
 </body>
 </html>
